--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,7 @@
     position: absolute;
     list-style: none;
     box-shadow: 0 0 20px rgb(0 0 0 / 8%);
+    z-index: 1;
     display: none;
 }
 
@@ -102,7 +103,11 @@
 }
 
 .header__menu-icon {
-    display: none
+    font-size: 2.6rem;
+    margin-left: 10px;
+    color: #000;
+    cursor: pointer;
+    display: none;
 }
 
 /* Introduction */
