--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -46,8 +46,6 @@
 
     .header__menu-icon {
         display: block;
-        font-size: 2.6rem;
-        margin-left: 10px;
     }
 
     #header__nav-bar-mobile:checked ~ .header__overlay {
@@ -145,11 +143,8 @@
     }
 
     .modal--title,
-    .card--title {
+    .card--title,
+    .modal--title {
         font-size: 2.4rem;
     }
-
-    .modal--title {
-        font-size: 3rem;
-}
 }
